<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/set_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="@dimen/text_width_main"
        android:layout_height="@dimen/text_height_main"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/w30"
        android:layout_marginTop="@dimen/margin_main"
        android:background="@drawable/border_member"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/member"
            style="@style/TextView_Top_Main"
            android:text="@string/member"
            android:textColor="@color/dark_black" />

        <TextView
            android:id="@+id/manager"
            style="@style/TextView_Top_Main"
            android:background="@drawable/border_red"
            android:text="@string/manager"
            android:textColor="@color/almost_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/psw_ll"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/margin_main"
            android:gravity="center_horizontal"
            android:text="@string/device_id"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_60" />

        <LinearLayout
            android:id="@+id/psw_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/open_or_close"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_psw"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_60" />

            <EditText
                android:id="@+id/edit_psw"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/please_device_psw"
                android:textColor="@color/white"
                android:textSize="@dimen/w20" />

            <TextView
                android:id="@+id/save"
                android:layout_width="@dimen/bind_intro_textView_height"
                android:layout_height="wrap_content"
                android:background="@drawable/border_red_gradient"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/almost_white"
                android:textSize="@dimen/text_size_60" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/open_or_close"
            android:layout_width="@dimen/setting_text_view_width"
            android:layout_height="100px"
            android:layout_above="@+id/back_system_setting"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"

            >

            <LinearLayout
                android:layout_width="@dimen/setting_text_view_width"
                android:layout_height="@dimen/setting_text_view_height"
                android:layout_above="@+id/back_system_setting"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="8px"
                android:paddingTop="8px">

                <TextView
                    android:id="@+id/open"
                    android:layout_width="@dimen/card_imageView_height"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_red_gradient"
                    android:gravity="center"
                    android:text="@string/open_door"
                    android:textColor="@color/almost_white"
                    android:textSize="@dimen/text_size_28" />

                <TextView
                    android:id="@+id/close"
                    android:layout_width="@dimen/card_imageView_height"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_gray_gradient"
                    android:gravity="center"
                    android:text="@string/close_door"
                    android:textColor="@color/dark_black"
                    android:textSize="@dimen/text_size_28" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/back_system_setting"
                android:layout_width="@dimen/setting_text_view_width"
                android:layout_height="100px"
                android:layout_centerInParent="true"
                android:background="@drawable/manager_text_bg"
                android:gravity="center_horizontal"
                android:paddingTop="10px"
                android:text="@string/back_system"
                android:textColor="@color/setting_text_black"
                android:textSize="@dimen/text_size_32" />

            <TextView
                android:id="@+id/back_app"
                android:layout_width="@dimen/setting_text_view_width"
                android:layout_height="100px"
                android:layout_below="@+id/back_system_setting"
                android:layout_centerInParent="true"
                android:background="@drawable/manager_text_bg"
                android:gravity="center_horizontal"
                android:paddingTop="10px"
                android:text="@string/back_app"
                android:textColor="@color/setting_text_black"
                android:textSize="@dimen/text_size_32" />


        </LinearLayout>
 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/open_use_detail"
                android:layout_width="@dimen/setting_text_view_width"
                android:layout_height="100px"
                android:layout_centerInParent="true"
                android:background="@drawable/manager_text_bg"
                android:gravity="center_horizontal"
                android:paddingTop="10px"
                android:text="@string/user_detail"
                android:textColor="@color/setting_text_black"
                android:textSize="@dimen/text_size_32" />

            <TextView
                android:id="@+id/clear_user"
                android:layout_width="@dimen/setting_text_view_width"
                android:layout_height="100px"
                android:layout_below="@+id/back_system_setting"
                android:layout_centerInParent="true"
                android:background="@drawable/manager_text_bg"
                android:gravity="center_horizontal"
                android:paddingTop="10px"
                android:text="@string/clear_user"
                android:textColor="@color/setting_text_black"
                android:textSize="@dimen/text_size_32" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/clean"
                android:layout_width="@dimen/setting_text_view_width"
                android:layout_height="100px"
                android:background="@drawable/manager_text_bg"
                android:gravity="center_horizontal"
                android:paddingTop="10px"
                android:text="@string/open_all"
                android:textColor="@color/setting_text_black"
                android:textSize="@dimen/text_size_32" />


            <EditText
                android:id="@+id/lockNum"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="@string/please_input_lock_num"
                android:textColor="@color/white"
                android:textSize="@dimen/w20" />

            <TextView
                android:id="@+id/openOne"
                android:layout_width="@dimen/setting_text_view_width"
                android:layout_height="100px"
                android:background="@drawable/manager_text_bg"
                android:gravity="center_horizontal"
                android:paddingTop="10px"
                android:text="@string/open_lock"
                android:textColor="@color/setting_text_black"
                android:textSize="@dimen/text_size_32" />
        </LinearLayout>
        <TextView
            android:id="@+id/back_system_main"
            android:layout_width="@dimen/setting_text_view_width"
            android:layout_height="100px"
            android:background="@drawable/manager_text_bg"
            android:gravity="center_horizontal"
            android:paddingTop="10px"
            android:text="@string/back_system_main"
            android:textColor="@color/setting_text_black"
            android:textSize="@dimen/text_size_32" />

        <TextView
            android:id="@+id/restart_app"
            android:layout_width="@dimen/setting_text_view_width"
            android:layout_height="100px"

            android:background="@drawable/manager_text_bg"
            android:gravity="center_horizontal"
            android:paddingTop="10px"
            android:text="@string/restart"
            android:textColor="@color/setting_text_black"
            android:textSize="@dimen/text_size_32" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:textColor="@color/red"
    android:textSize="@dimen/text_size_32"
    android:text="@string/finish"
    />
    </LinearLayout>
</LinearLayout>