<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/w600"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="@dimen/w500"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/w20"
        android:layout_marginTop="@dimen/h30"
        android:background="@drawable/bg_white_rectangle_corner_r20"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/code_cheack"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/w24" />

            <TextView
                android:id="@+id/passwordCheack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="@dimen/w20"
                android:text="@string/cheack_phone"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/w20" />


        </FrameLayout>

        <View style="@style/DividerLineHorizontal"></View>


        <LinearLayout
            android:layout_width="@dimen/w500"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h30"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/qrcodeImage"
                android:layout_width="@dimen/w120"
                android:layout_height="@dimen/w120" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h30"
                android:text="@string/code_scan"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/w24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/h30"
                android:layout_marginTop="@dimen/h16"
                android:text="@string/use_wechat_sacn"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/w18" />


        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="@dimen/h50"
        android:layout_height="@dimen/h50"
        android:src="@drawable/ic_close_icon" />

</RelativeLayout>